# ths_fuyaoMCP

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/knowledge/: open_source_quant_ai.md  sources.json
src/fuyao_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  knowledge.py  markdown.py  mcp_hub.py  memory.py  neutrality.py  prediction_schema.py  scoring.py  web.py  workflows.py
src/fuyao_agent/web_static/: app.js  index.html  styles.css
tests/: test_config.py  test_markdown.py  test_memory.py  test_prediction_schema.py  test_scoring.py  test_workflows.py
